modified css to prevent hiding addressbar on mobile for better swiping experience

--- a/public/style.css
+++ b/public/style.css
@@ -23,6 +23,7 @@ html {
 body {
   height: 100%;
   width: 100%;
+  position: fixed;
   overflow:hidden;
   -webkit-overflow-scrolling: hidden;
   /* iOS velocity scrolling */
